# pow-guard

./: .env.default  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  pytest.ini  requirements.txt  workspace.code-workspace
.devcontainer/: Dockerfile  Dockerfile.dev  Dockerfile.mockserver  devcontainer.json  docker-compose.dev.yaml  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  deploy.yml  test.yml
docker/: Dockerfile.app  Dockerfile.mockserver  docker-compose.yaml
docs/: proof-of-work-problem.drawio
mockserver/: __init__.py
src/: __init__.py  app.py  config.py  env.py  logger.py  pow.py  proxy.py  session.py
src/middlewares/: router.py  verifier.py
src/proxy/: forwarder.py
src/routes/: pow.py
src/services/: __init__.py  challenger.py  session.py  verifier.py
src/static/css/: style.css
src/static/js/: pow.js
src/templates/: pow.html
src/utils/: redis.py
tests/: test_challenger.py  test_verifier.py
