[project]
name = "pow-guard"
version = "0.1.0"
description = "Proof-of-work guard"
requires-python = ">=3.12"
dependencies = [
    "certifi==2026.6.17",
    "charset-normalizer==3.4.9",
    "idna==3.18",
    "requests==2.34.2",
    "simple-http-server==0.22.3",
    "sockets==1.0.0",
    "urllib3==2.7.0",
    "aiohttp==3.14.2",
    "fastapi==0.139.2",
    "uvicorn==0.51.0",
    "python-dotenv==1.2.2",
    "redis==8.0.1",
    "jinja2==3.1.6",
    "brotli==1.2.0",
    "python-json-logger==4.1.0",
    "starlette==1.3.1",
    "typing-extensions==4.16.0",
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "coverage==7.15.2",
    "pytest==9.1.1",
    "pytest-env==1.7.0",
    "fakeredis==2.36.2",
    "pytest-mock==3.15.1",
    "freezegun==1.5.5",
]

[tool.uv]
package = false
